package edu.fiuba.algo3.modelo;

public class Brujula {

    private Ciudad origen;
    private Ciudad destino;


    public int calcularDistanciaEntre(Ciudad ciudadActual,Ciudad destinoSeleccionado  ) {
        return 1800;
    }
}
