@startuml
'https://plantuml.com/class-diagram

class Policia{
-cantidadArrestos

+ entrarAEdificio(indiceEdificio)
+ viajarA(destino) : int

}

abstract class Rango{
-velocidad
-cantidadNecesariaParaAscender

+ {abstract} ascender(cantidadArrestos))
}

class RangoNovato{
+ascender(cantidadArrestos)
}

class RangoDetective{
+ascender(cantidadArrestos)
}

class RangoInvestigador{
+ascender(cantidadArrestos)
}

class RangoSargento{
+ascender(cantidadArrestos)
}

class Brujula{

{static} +calcularDistanciaEntre(origen, destino) : (int distancia)
}

class Ciudad{
-poblacion:string
-bandera:string
-moneda:string
-idioma:string
-contadorVisitaEdificio: int

+entrarAEdificio(indiceEdificio)
+generarPista(ciudadSiguiente, pistaDelincuente)
}

Policia --> Ciudad
Policia --> Brujula
Policia --> Rango
RangoNovato ..|> Rango
RangoDetective ..|> Rango
RangoSargento ..|> Rango
RangoInvestigador ..|> Rango



@enduml